kcms/kfontinst: Open own X connection when not running under X

Ensures that it at least somewhat works on Wayland.

While at it, ports xcb_image back to XImage so we only need an Xlib display.

BUG: 439470